--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,6 +11,7 @@
 #
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
+set $alt Mod1
 # Your preferred terminal emulator
 set $term ~/bin/terminal
 # Your preferred application launcher
@@ -27,8 +28,16 @@ output DP-2 pos 0 1080
 output DVI-I-1 pos 2560 0
 output HDMI-A-1 pos 2560 1080
 
-output eDP-1 res 1920 1080 pos 0 0
-output DP-2 res 2560 1080 pos 1920 0
+# laptop config #1:
+# output DP-2 res 2560 1080 pos 0 0
+# output eDP-1 disable
+# #output eDP-1 res 1920 1080 pos 2560 0
+# output HDMI-A-1 pos 0 1080
+
+# laptop config #2:
+output DP-2 res 2560 1080 pos 0 0
+output eDP-1 scale 2
+output HDMI-A-1 pos 0 1080
 
 output eDP-1 bg ~/Bilder/wallpapers/1 fill
 
@@ -196,37 +205,62 @@ hide_edge_borders smart
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-    swaybar_command /usr/bin/swaybar
-    status_command i3status
-    position bottom
-    # laptop screen
-    output eDP-1
-}
-bar {
-    swaybar_command /usr/bin/swaybar
-    status_command i3status
-    position top
-    output DP-1
-}
-bar {
-    swaybar_command /usr/bin/swaybar
-    status_command i3status
-    position bottom
-    output DP-2
-}
-bar {
-    swaybar_command /usr/bin/swaybar
-    status_command i3status
-    position top
-    output DVI-I-1
-    #font pango:DejaVu Sans Mono 10
-}
-bar {
-    swaybar_command /usr/bin/swaybar
-    status_command i3status
-    position bottom
-    output HDMI-A-1
-}
+#
+# hotkeys:
+#
+  bindsym control+$alt+l exec ~/bin/screenlock.sway
+  bindsym control+$alt+s exec ~/bin/suspend.sway
+
+  # Use xev to find keys:
+  bindsym XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
+  bindsym XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
+
+  # previous/next become volume keys:
+  bindsym XF86AudioPrev exec --no-startup-id ~/bin/voldown
+  bindsym XF86AudioNext exec --no-startup-id ~/bin/volup
+
+  bindsym XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
+
+  bindsym XF86Calculator exec ~/bin/calculator
+  bindsym XF86Favorites exec ~/bin/screenshot
+
+  bindsym XF86MonBrightnessUp exec brightnessctl s +15%
+  bindsym XF86MonBrightnessDown exec brightnessctl s 15%-
+
+#
+# Outputs:
+#
+    # Start i3bar to display a workspace bar (plus the system information
+    # i3status finds out, if available)
+    bar {
+        swaybar_command /usr/bin/swaybar
+        status_command /usr/bin/i3status
+        position bottom
+        # laptop screen
+        output eDP-1
+    }
+    bar {
+        swaybar_command /usr/bin/swaybar
+        status_command /usr/bin/i3status
+        position top
+        output DP-1
+    }
+    bar {
+        swaybar_command /usr/bin/swaybar
+        status_command /usr/bin/i3status
+        position bottom
+        output DP-2
+    }
+    bar {
+        swaybar_command /usr/bin/swaybar
+        status_command /usr/bin/i3status
+        position top
+        output DVI-I-1
+        #font pango:DejaVu Sans Mono 10
+    }
+    bar {
+        swaybar_command /usr/bin/swaybar
+        status_command /usr/bin/i3status
+        position bottom
+        output HDMI-A-1
+    }
