--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,9 @@ set $alt Mod1
 # Your preferred terminal emulator
 set $term ~/bin/terminal
 # Your preferred application launcher
-set $menu dmenu_run
+#set $menu dmenu_run
+set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
+set $menu_alt "rofi -show run"
 
 ### Outputs
 # output DP-1 res 1920 1080 pos 0 0
@@ -66,7 +68,8 @@ hide_edge_borders smart
     bindsym $mod+c kill
 
     # start your launcher
-    bindsym $mod+d exec $menu
+    bindsym $mod+d exec "rofi -combi-modi window,drun,run -show combi -modi combi"
+    bindsym shift+$mod+d exec $menu_alt
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
