--- a/.config/sway/config
+++ b/.config/sway/config
@@ -42,15 +42,23 @@ output $out_home_benq2 pos 3640 0 bg ~/Bilder/wallpapers/4 fill
 # laptop config #1:
 
 set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
+
 # $out_home_dell1 should be DP-2
 # $out_home_dell2 should be HDMI-A-1
-
 output $out_home_dell1 pos 0 0 bg ~/Bilder/wallpapers/2 fill
 output $out_home_dell2 pos 0 1080 bg ~/Bilder/wallpapers/3 fill
 
 output $dellicious_out1 pos 2560 0 scale 1.5 bg ~/Bilder/wallpapers/1 fill
 
 # laptop config #2:
+# $work_dell1 should be DP-2
+# $work_dell2 should be HDMI-A-1
+set $work_dell1 'Dell Inc. DELL U2718Q FN84K81J0L7L'
+set $work_dell2 'Dell Inc. DELL P2715Q V7WP958R348S'
+
+output $work_dell1 scale 1.5
+output $work_dell2 res 1920 1080 transform 270
+
 #output DP-2 res 2560 1080 pos 0 0
 ##output eDP-1 scale 2
 #output HDMI-A-1 pos 0 1080
@@ -252,9 +260,9 @@ hide_edge_borders smart
       status_command /usr/bin/i3status
 
       position bottom
-      output $dellicious_out1
       output $out_home_dell2
   }
+
   bar {
       swaybar_command /usr/bin/swaybar
       status_command /usr/bin/i3status
@@ -263,4 +271,7 @@ hide_edge_borders smart
       output $out_home_dell1
       output $out_home_benq1
       output $out_home_benq2
+      output $work_dell1
+      output $work_dell2
+      output $dellicious_out1
   }
