.config/sway: Extract output.config.

--- a/.config/sway/essential-hotkeys.config
+++ b/.config/sway/essential-hotkeys.config
@@ -1,3 +1,10 @@
+# Your preferred terminal emulator
+set $term ~/bin/terminal
+
+#set $menu dmenu_run
+set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
+set $menu_alt "rofi -show run"
+
 #
 # Basics:
 #
@@ -9,7 +16,7 @@
     bindsym $mod+c kill
 
     # start your launcher
-    bindsym $mod+d exec "rofi -combi-modi window,drun,run -show combi -modi combi"
+    bindsym $mod+d exec $menu
     bindsym shift+$mod+d exec $menu_alt
 
     # Drag floating windows by holding down $mod and left mouse button.
