--- a/.config/sway/theme.config
+++ b/.config/sway/theme.config
@@ -1,3 +1,13 @@
+### Misc config
+gaps inner 15
+#gaps outer 0
+#smart_gaps on
+
+default_border pixel 5
+#hide_edge_borders smart
+#hide_edge_borders both
+
+### Colors
 # class                   border  backgr. text    indicator child_border
 # client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
 # client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
