--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,23 +1,10 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
 # Read `man 5 sway` for a complete reference.
-#
-# Sway is a work in progress. Some of these defaults are currently unimplemented.
-
 
 ### Variables
-#
+
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
 set $alt Mod1
-# Your preferred terminal emulator
-set $term ~/bin/terminal
-# Your preferred application launcher
-#set $menu dmenu_run
-set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
-set $menu_alt "rofi -show run"
 
 # Inputs:
 input * {
@@ -26,70 +13,9 @@ input * {
 
 ### Outputs
 
-# default to some background that will probably exist:
-output * bg ~/Bilder/wallpapers/1 fill
+  include ./output.config
 
-# kira config:
-
-# DP-5
-set $out_home_dell1 'Dell Inc. DELL U2913WM 9DD4K62O422L'
-# DP-3
-set $out_home_dell2 'Dell Inc. DELL U2913WM 9DD4K62O241L'
-
-set $out_home_benq1 'Unknown BenQ G2450H 32C02755019'
-set $out_home_benq2 'Unknown BenQ G2450H 32C03067019'
-set $out_home_switch 'Unknown EP-HDMI-RX 0x00005445'
-
-output $out_home_dell1 pos 0 0 bg ~/Bilder/wallpapers/1 fill
-output $out_home_dell2 pos 0 1080 bg ~/Bilder/wallpapers/2 fill
-output $out_home_benq1 pos 2560 0 bg ~/Bilder/wallpapers/3 fill transform 270
-output $out_home_benq2 pos 3640 0 bg ~/Bilder/wallpapers/4 fill
-output $out_home_switch pos 3640 0 bg ~/Bilder/wallpapers/4 fill
-
-# the hdmi switch defaults to 1280x720 for some reason
-output $out_home_switch res 1920x1080
-
-# laptop config #1:
-
-set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
-
-# $out_home_dell1 should be DP-2
-# $out_home_dell2 should be HDMI-A-1
-output $out_home_dell1 pos 0 0 bg ~/Bilder/wallpapers/2 fill
-output $out_home_dell2 pos 0 1080 bg ~/Bilder/wallpapers/3 fill
-
-output $dellicious_out1 pos 2560 0 scale 1.5 bg ~/Bilder/wallpapers/1 fill
-
-# laptop config #2:
-# $work_dell1 should be DP-2
-# $work_dell2 should be HDMI-A-1
-set $work_dell1 'Dell Inc. DELL U2718Q FN84K81J0L7L'
-set $work_dell2 'Dell Inc. DELL P2715Q V7WP958R348S'
-
-#output $work_dell1 scale 1.5
-output $work_dell1 res 2560x1440
-output $work_dell2 res 1920 1080 transform 270
-
-#output DP-2 res 2560 1080 pos 0 0
-##output eDP-1 scale 2
-#output HDMI-A-1 pos 0 1080
-
-# laptop config at work:
-# output DP-2 res 2560 1440 pos 0 0
-# output HDMI-A-1 res 1920 1080 transform 270 pos 0 1440
-
-
-### Misc config
-gaps inner 15
-#gaps outer 0
-smart_gaps on
-
-default_border pixel 1
-hide_edge_borders smart
-
-#
-# Inputs
-#
+### Inputs
 
   input * {
     xkb_layout no
@@ -110,38 +36,8 @@ hide_edge_borders smart
   include ./essential-hotkeys.config
   include ./hotkeys.config
 
-#
-# Outputs:
-#
-  bar {
-      swaybar_command /usr/bin/swaybar
-      # Start i3bar to display a workspace bar (plus the system information
-      # i3status finds out, if available)
-      status_command /usr/bin/i3status
+### Colors:
 
-      position bottom
-      output $out_home_dell2
-  }
-
-  bar {
-      swaybar_command /usr/bin/swaybar
-      status_command /usr/bin/i3status
-
-      position top
-      output $out_home_dell1
-      output $out_home_benq1
-      output $out_home_benq2
-      output $out_home_switch
-
-      output $work_dell1
-      output $work_dell2
-
-      output $dellicious_out1
-  }
-
-#
-# Colors:
-#
   include ./theme.config
 
 #
