.config/sway/output-dellicious: Extract from output.config. Cleanup.

--- a/.config/sway/output-kira.config
+++ b/.config/sway/output-kira.config
@@ -1,14 +1,39 @@
 # kira config:
 
-  output $out_home_dell1 pos 0 0 bg ~/Bilder/wallpapers/1 fill
-  output $out_home_dell2 pos 0 1080 bg ~/Bilder/wallpapers/2 fill
-  output $out_home_benq1 pos 2560 0 bg ~/Bilder/wallpapers/3 fill transform 270
-  output $out_home_benq2 pos 3640 0 bg ~/Bilder/wallpapers/4 fill
-  output $out_home_switch pos 3640 0 bg ~/Bilder/wallpapers/4 fill
+  # DP-5
+  output $out_home_dell1 {
+    pos 0 0
 
-  # the hdmi switch defaults to 1280x720 for some reason
-  output $out_home_switch res 1920x1080
+    bg ~/Bilder/wallpapers/1 fill
+  }
 
+  # DP-3
+  output $out_home_dell2 {
+    pos 0 1080
+
+    bg ~/Bilder/wallpapers/2 fill
+  }
+
+  output $out_home_benq1 {
+    pos 2560 0
+    transform 270
+
+    bg ~/Bilder/wallpapers/3 fill
+  }
+
+  output $out_home_benq2 {
+    pos 3640 0
+
+    bg ~/Bilder/wallpapers/4 fill
+  }
+
+  output $out_home_switch {
+    pos 3640 0
+
+    bg ~/Bilder/wallpapers/4 fill
+  }
+
+### bar config:
 
   bar {
       output $out_home_dell2
