--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,6 +14,8 @@ input * {
 ### Outputs
 
   include ./output.config
+
+  # Remember to symlink this one to whatever machine config you need:
   include ./output-local.config
 
 ### Inputs
