.config/sway/hotkeys.config: f2/f3: Resolution/scale up/down.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -20,4 +20,11 @@ bindsym {
 
   XF86MonBrightnessUp exec brightnessctl s +15%
   XF86MonBrightnessDown exec brightnessctl s 15%-
+
+  # conveniently change resolution/scale of current display up/down.
+  f2 exec ~/bin/sway-res-current
+  shift+f2 exec ~/bin/sway-res-current-reverse
+
+  f3 exec ~/bin/sway-scale-current
+  shift+f3 exec ~/bin/sway-scale-current-reverse
 }
