.config/sway: Add alt terminal and gaps hotkeys.

--- a/.config/sway/essential-hotkeys.config
+++ b/.config/sway/essential-hotkeys.config
@@ -1,5 +1,6 @@
 # Your preferred terminal emulator
 set $term ~/bin/terminal
+set $term_alt ~/bin/terminal.xfce
 
 #set $menu dmenu_run
 set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
@@ -10,6 +11,7 @@ set $menu_alt "rofi -show run"
 #
     # start a terminal
     bindsym $mod+Return exec $term
+    bindsym $mod+shift+Return exec $term_alt
 
     # kill focused window
     bindsym $mod+Shift+q kill
