--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -27,4 +27,8 @@ bindsym {
 
   f3 exec ~/bin/sway-scale-current
   shift+f3 exec ~/bin/sway-scale-current-reverse
+
+  # turn gaps on/off. theme-air uses 15 pixels:
+  $mod+g exec swaymsg gaps inner current set 0
+  $mod+shift+g exec swaymsg gaps inner current set 15
 }
