.config/sway/output-dellicious: Add new Dell monitor.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -20,6 +20,7 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
   }
 
   output $dellicious_out1 {
+    # position is good at home but not at work...
     pos 2560 0
     scale 1.5
 
@@ -32,15 +33,29 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
   # $work_dell2 should be HDMI-A-1
   set $work_dell1 'Dell Inc. DELL U2718Q FN84K81J0L7L'
   set $work_dell2 'Dell Inc. DELL P2715Q V7WP958R348S'
+  set $work_dell3 'Dell Inc. Dell U4919DW FFW0XP2'
 
   output $work_dell1 {
-    # scale 1.5
+    # sway actually allows a setup where no monitor has the 0x0 position, so
+    # lets just append these monitors further to the right:
+    # 2560 + 2560 = 5120
+    pos 5120 0
     res 2560x1440
   }
 
   output $work_dell2 {
+    # don't really need this position since sway will do the right thing:
+    pos 7680 0
     res 1920 1080
     transform 270
+  }
+
+  output $work_dell3 {
+    # we want this to be above the laptop monitor (where it is physically
+    # located), but there's no way to change the position of the laptop screen
+    # away from "0x0" only when this monitor is plugged in, so we just place it
+    # below the laptop instead...
+    pos 1280 1440
   }
 
 ### bar config:
