.config/sway: Misc adjustments.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -1,3 +1,5 @@
+# (having a comment here makes vim understand the syntax of this file)
+
 bindsym {
   control+$alt+l exec ~/bin/screenlock.sway
   control+$alt+s exec ~/bin/suspend.sway
