--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -21,8 +21,11 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
   output $dellicious_out1 {
     # position is good at home but not at work...
-    pos 2560 0
-    scale 1.5
+    #pos 2560 0
+
+    # for work:
+    pos 3200 0
+    scale 2
 
     bg ~/Bilder/wallpapers/1 fill
   }
@@ -68,6 +71,7 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
       output $work_dell1
       output $work_dell2
+      output $work_dell3
 
       output $dellicious_out1
 
