.config/sway: Swap waybar for swaybar for now.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -75,9 +75,10 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
       output $dellicious_out1
 
-      swaybar_command /usr/local/bin/waybar
-      #swaybar_command /usr/bin/swaybar
-      # status_command /usr/bin/i3status
+      # waybar doesn't like fedora 30?
+      #swaybar_command /usr/local/bin/waybar
+      swaybar_command /usr/bin/swaybar
+      status_command /usr/bin/i3status
 
       position top
   }
