--- a/.config/sway/output-kira.config
+++ b/.config/sway/output-kira.config
@@ -38,13 +38,13 @@
   bar {
       output $out_home_dell2
 
+      # waybar doesn't like fedora 30?
+      #swaybar_command /usr/local/bin/waybar
       swaybar_command /usr/bin/swaybar
 
       # Start i3bar to display a workspace bar (plus the system information
       # i3status finds out, if available)
       status_command /usr/bin/i3status
-
-      #swaybar_command /usr/local/bin/waybar
 
       position bottom
   }
@@ -55,8 +55,8 @@
       output $out_home_benq2
       output $out_home_switch
 
+      # waybar doesn't like fedora 30?
       #swaybar_command /usr/local/bin/waybar
-
       swaybar_command /usr/bin/swaybar
        status_command /usr/bin/i3status
 
