.config/sway/output-dellicious: Fix for home & work.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -8,13 +8,17 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
   # $out_home_dell1 should be DP-2
   # $out_home_dell2 should be HDMI-A-1
   output $out_home_dell1 {
-    pos 0 0
+    # we use 640 instead of zero so that we can have the same position for
+    # $dellicious_out1 at home and at work...
+    pos 640 0
 
     bg ~/Bilder/wallpapers/2 fill
   }
 
   output $out_home_dell2 {
-    pos 0 1080
+    # we use 640 instead of zero so that we can have the same position for
+    # $dellicious_out1 at home and at work...
+    pos 640 1080
 
     bg ~/Bilder/wallpapers/3 fill
   }
