.config/sway/output-dellicious: Add swaybar to out_home_dell2.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -86,3 +86,14 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
       position top
   }
+
+  bar {
+      output $out_home_dell2
+
+      # waybar doesn't like fedora 30?
+      #swaybar_command /usr/local/bin/waybar
+      swaybar_command /usr/bin/swaybar
+      status_command /usr/bin/i3status
+
+      position bottom
+  }
