--- a/.config/sway/output-kira.config
+++ b/.config/sway/output-kira.config
@@ -1,31 +1,32 @@
 # kira config:
 
   # DP-5
-  output $out_home_dell1 {
+  output $out_home_dell_over {
     pos 0 0
 
     bg ~/Bilder/wallpapers/1 fill
   }
 
   # DP-3
-  output $out_home_dell2 {
+  output $out_home_dell_under {
     pos 0 1080
 
     bg ~/Bilder/wallpapers/2 fill
   }
 
-  output $out_home_benq1 {
+  output $out_home_benq_right {
     pos 2560 0
-    transform 270
+    #transform 270
+    transform 90
 
     bg ~/Bilder/wallpapers/3 fill
   }
 
-  output $out_home_benq2 {
-    pos 3640 0
-
-    bg ~/Bilder/wallpapers/4 fill
-  }
+  # output $out_home_benq2 {
+  #   pos 3640 0
+  #
+  #   bg ~/Bilder/wallpapers/4 fill
+  # }
 
   output $out_home_switch {
     pos 3640 0
@@ -36,7 +37,7 @@
 ### bar config:
 
   bar {
-      output $out_home_dell2
+      output $out_home_dell_under
 
       # waybar doesn't like fedora 30?
       #swaybar_command /usr/local/bin/waybar
@@ -50,7 +51,7 @@
   }
 
   bar {
-      output $out_home_dell1
+      output $out_home_dell_over
       output $out_home_benq1
       output $out_home_benq2
       output $out_home_switch
