.config/sway/output-dellicious: New setup.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -7,21 +7,27 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
   # $out_home_dell1 should be DP-2
   # $out_home_dell2 should be HDMI-A-1
-  output $out_home_dell1 {
+  output $out_home_dell_over {
     # we use 640 instead of zero so that we can have the same position for
     # $dellicious_out1 at home and at work...
-    pos 640 0
+    #pos 640 0
+    pos 3200 -1080
 
     bg ~/Bilder/wallpapers/2 fill
   }
 
-  output $out_home_dell2 {
-    # we use 640 instead of zero so that we can have the same position for
-    # $dellicious_out1 at home and at work...
-    pos 640 1080
+  # output $out_home_dell_under {
+  #   # we use 640 instead of zero so that we can have the same position for
+  #   # $dellicious_out1 at home and at work...
+  #   pos 640 1080
 
-    bg ~/Bilder/wallpapers/3 fill
-  }
+  #   # FIXME: this should not be needed, but when switching from work to home it
+  #   # will stay rotated unless the config is reloaded. Perhaps this makes
+  #   # config reload unnecessary:
+  #   transform normal
+
+  #   bg ~/Bilder/wallpapers/3 fill
+  # }
 
   output $dellicious_out1 {
     # position is good at home but not at work...
@@ -32,6 +38,14 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
     scale 2
 
     bg ~/Bilder/wallpapers/1 fill
+  }
+
+  output $out_home_benq_right {
+    pos 5760 -1080
+
+    transform 90
+
+    bg ~/Bilder/wallpapers/3 fill
   }
 
 # laptop config #2:
