.config/sway/output-dellicious: Add home_dell_under

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -7,7 +7,8 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
   output $dellicious_out1 {
     # position is good at home but not at work...
-    pos 3200 1080
+    #pos 3200 1080
+    pos 1280 0
 
     # for work:
     #pos 3200 0
@@ -23,6 +24,12 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
     # $dellicious_out1 at home and at work...
     #pos 640 0
     #pos 3200 -1080
+    pos 3200 0
+
+    bg ~/Bilder/wallpapers/2 fill
+  }
+
+  output $out_home_dell_under {
     pos 3200 0
 
     bg ~/Bilder/wallpapers/2 fill
