--- a/.config/sway/essential-hotkeys.config
+++ b/.config/sway/essential-hotkeys.config
@@ -4,7 +4,8 @@ set $term_alt ~/bin/terminal.xfce
 
 #set $menu dmenu_run
 set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
-set $menu_alt "rofi -show run"
+#set $menu_alt "rofi -show run"
+set $menu_alt "GDK_BACKEND=x11 ulauncher-toggle"
 
 #
 # Basics:
