.config/sway/output-dellicious: Update bar config.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -91,32 +91,41 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 ### bar config:
 
   bar {
-      output $out_home_dell1
-      output $out_home_benq1
-      output $out_home_benq2
-      output $out_home_switch
-
-      output $work_dell1
-      output $work_dell2
-      output $work_dell3
-
-      output $dellicious_out1
-
-      # waybar doesn't like fedora 30?
-      #swaybar_command /usr/local/bin/waybar
-      swaybar_command /usr/bin/swaybar
-      status_command /usr/bin/i3status
-
+      # with this config we get double bars for specific outputs (below).
+      # without this config we don't get bars for new/unknown outputs...
       position top
-  }
 
-  bar {
-      output $out_home_dell2
-
-      # waybar doesn't like fedora 30?
-      #swaybar_command /usr/local/bin/waybar
       swaybar_command /usr/bin/swaybar
       status_command /usr/bin/i3status
-
-      position bottom
   }
+
+  # bar {
+  #     output $out_home_dell1
+  #     output $out_home_benq1
+  #     output $out_home_benq2
+  #     output $out_home_switch
+
+  #     output $work_dell1
+  #     output $work_dell2
+  #     output $work_dell3
+
+  #     output $dellicious_out1
+
+  #     # waybar doesn't like fedora 30?
+  #     #swaybar_command /usr/local/bin/waybar
+  #     swaybar_command /usr/bin/swaybar
+  #     status_command /usr/bin/i3status
+
+  #     position top
+  # }
+
+  # bar {
+  #     output $out_home_dell2
+
+  #     # waybar doesn't like fedora 30?
+  #     #swaybar_command /usr/local/bin/waybar
+  #     swaybar_command /usr/bin/swaybar
+  #     status_command /usr/bin/i3status
+
+  #     position bottom
+  # }
