--- a/.config/kanshi/config
+++ b/.config/kanshi/config
@@ -28,3 +28,9 @@ dellicious-home-right-only {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 2
   output "Unknown BenQ G2450H 32C03067019" position 1920,0 transform 90
 }
+
+dellicious-work {
+  output "Sharp Corporation 0x143E 0x00000000" position 0,360 scale 2
+  output "Dell Inc. DELL U2718Q FN84K81J0L7L" position 1920,0 mode 2560x1440
+  output "Dell Inc. DELL P2715Q V7WP958R348S" position 4480,0 transform 270
+}
