--- a/.config/kanshi/config
+++ b/.config/kanshi/config
@@ -34,3 +34,8 @@ dellicious-work {
   output "Dell Inc. DELL U2718Q FN84K81J0L7L" position 1920,0 mode 2560x1440
   output "Dell Inc. DELL P2715Q V7WP958R348S" position 4480,0 transform 270
 }
+
+dellicious-work-right-only {
+  output "Sharp Corporation 0x143E 0x00000000" position 0,360 scale 2
+  output "Dell Inc. DELL P2715Q V7WP958R348S" position 1920,0 transform 270
+}
