--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -8,20 +8,20 @@ bindsym {
   $alt+Shift+s exec ~/bin/screenshot.sway
 
   # Use xev to find keys:
-  XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
-  XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
+  --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
+  --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
 
   # previous/next become volume keys:
-  XF86AudioPrev exec --no-startup-id ~/bin/voldown
-  XF86AudioNext exec --no-startup-id ~/bin/volup
+  --locked XF86AudioPrev exec --no-startup-id ~/bin/voldown
+  --locked XF86AudioNext exec --no-startup-id ~/bin/volup
 
-  XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
+  --locked XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
 
   XF86Calculator exec ~/bin/calculator
   XF86Favorites exec ~/bin/screenshot
 
-  XF86MonBrightnessUp exec brightnessctl s +15%
-  XF86MonBrightnessDown exec brightnessctl s 15%-
+  --locked XF86MonBrightnessUp exec brightnessctl s +15%
+  --locked XF86MonBrightnessDown exec brightnessctl s 15%-
 
   # conveniently change resolution/scale of current display up/down.
   f2 exec ~/bin/sway-res-current
