--- a/.local/share/applications/com.google.AndroidStudio.desktop
+++ b/.local/share/applications/com.google.AndroidStudio.desktop
@@ -2,8 +2,10 @@
 [Desktop Entry]
 Name=Android Studio (flatpak, w/sway fix)
 Exec=env _JAVA_AWT_WM_NONREPARENTING=1 flatpak run com.google.AndroidStudio
+#Exec=env _JAVA_AWT_WM_NONREPARENTING=1 flatpak run --filesystem=host:ro --filesystem=xdg-data:rw --filesystem=xdg-config:rw --filesystem=~/.AndroidStudio3.6:rw com.google.AndroidStudio
+#Exec=env _JAVA_AWT_WM_NONREPARENTING=1 flatpak run --filesystem=/:ro com.google.AndroidStudio
 Icon=com.google.AndroidStudio
-Comment=Development environment for the Android platform (flatpa, w/sway fix)
+Comment=Development environment for the Android platform (flatpak, w/sway fix)
 Terminal=false
 Type=Application
 Categories=Development;IDE;Java;
