--- a/.config/kanshi/config
+++ b/.config/kanshi/config
@@ -1,46 +1,46 @@
-dellicious-plain {
+profile dellicious-plain {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 1.5
 }
 
-dellicious-home-top {
+profile dellicious-home-top {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 2
   output "Dell Inc. DELL U2913WM 9DD4K62O241L" position 1920,0
   output "Unknown BenQ G2450H 32C03067019" position 4480,0 transform 90 mode 1920x1080
 }
 
-dellicious-home-top-only {
+profile dellicious-home-top-only {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 2
   output "Dell Inc. DELL U2913WM 9DD4K62O241L" position 1920,0 transform normal mode 2560x1080
 }
 
-dellicious-home-bottom {
+profile dellicious-home-bottom {
   output "Sharp Corporation 0x143E 0x00000000" position 0,840 scale 2
   output "Dell Inc. DELL U2913WM 9DD4K62O422L" position 1920,840 transform normal mode 2560x1080
-  output "Unknown BenQ G2450H 32C03067019" position 4480,0 transform 90 mode 1920x1080
+  output "BenQ Corporation BenQ G2450H 32C03067019" position 4480,0 transform 90 mode 1920x1080
 }
 
-dellicious-home-bottom-only {
+profile dellicious-home-bottom-only {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 2
   output "Dell Inc. DELL U2913WM 9DD4K62O422L" position 1920,0 transform normal mode 2560x1080
 }
 
-dellicious-home-right-only {
+profile dellicious-home-right-only {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 2
-  output "Unknown BenQ G2450H 32C03067019" position 1920,0 transform 90 mode 1920x1080
+  output "BenQ Corporation BenQ G2450H 32C03067019" position 1920,0 transform 90 mode 1920x1080
 }
 
-dellicious-work {
+profile dellicious-work {
   output "Sharp Corporation 0x143E 0x00000000" position 0,360 scale 2
   output "Dell Inc. DELL U2718Q FN84K81J0L7L" position 1920,0 transform normal mode 2560x1440
   output "Dell Inc. DELL P2715Q V7WP958R348S" position 4480,0 transform 270
 }
 
-dellicious-work-right-only {
+profile dellicious-work-right-only {
   output "Sharp Corporation 0x143E 0x00000000" position 0,360 scale 2
   output "Dell Inc. DELL P2715Q V7WP958R348S" position 1920,0 transform 270
 }
 
-dellicious-external1 {
+profile dellicious-external1 {
   output "Sharp Corporation 0x143E 0x00000000" position 0,0 scale 1.5
   output "Goldstar Company Ltd LG TV 0x00000101" position 1920,0 mode 1920x1080@60Hz
 }
