.config/sway/output.config: Update sway output ids.

--- a/.config/sway/output.config
+++ b/.config/sway/output.config
@@ -5,10 +5,11 @@
 
   set $out_home_dell_over  'Dell Inc. DELL U2913WM 9DD4K62O241L'
   set $out_home_dell_under 'Dell Inc. DELL U2913WM 9DD4K62O422L'
-  set $out_home_benq_right 'Unknown BenQ G2450H 32C03067019'
+  set $out_home_benq_right 'BenQ Corporation BenQ G2450H 32C03067019'
 
-  set $out_home_benq1 'Unknown BenQ G2450H 32C02755019'
-  set $out_home_benq2 'Unknown BenQ G2450H 32C03067019'
+  set $out_home_benq1 'BenQ Corporation BenQ G2450H 32C02755019'
+  set $out_home_benq2 'BenQ Corporation BenQ G2450H 32C03067019'
+
   set $out_home_switch 'Unknown EP-HDMI-RX 0x00005445'
 
 # common config:
