.config/sway: Misc adjustments. Suspend from lockscreen OK.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -2,7 +2,7 @@
 
 bindsym {
   control+$alt+l exec ~/bin/screenlock.sway
-  control+$alt+s exec ~/bin/suspend.sway
+  --locked control+$alt+s exec ~/bin/suspend.sway
 
   $alt+s exec ~/bin/screenshot-partial.sway
   $alt+Shift+s exec ~/bin/screenshot.sway
@@ -33,4 +33,7 @@ bindsym {
   # turn gaps on/off. theme-air uses 15 pixels:
   $mod+g exec swaymsg gaps inner current set 0
   $mod+shift+g exec swaymsg gaps inner current set 15
+
+  $mod+o opacity plus 0.1
+  $mod+shift+o opacity minus 0.1
 }
