--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -4,6 +4,12 @@
 
 ### Misc config
 
+  # It's nice to see if an application is xwayland or native wayland (xdg_shell):
+  for_window [title="."] title_format "%title # %shell"
+
+  #focus_follows_mouse always
+  focus_follows_mouse yes
+
   # Always show big gaps, even when single window:
   gaps inner 15
   #gaps outer 0
