--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 !/meta
 !/meta/**/**
 
+!.vim/coc-settings.json
+
 # ... but now there's too much again, so start blacklisting specifics:
 .bash_history
 .lesshst
